<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.5</version>
        <relativePath/>
    </parent>

    <groupId>com.poly</groupId>
    <artifactId>hotel_management</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>hotel_management</name>
    <description>hotel_management</description>

    <url/>

    <licenses>
        <license/>
    </licenses>

    <developers>
        <developer/>
    </developers>


    <modules>
        <module>common</module>
        <module>infrastructure</module>
        <module>api-gateway</module>
        <module>room-management</module>
        <module>customer-management</module>
        <module>spring-ai-management</module>
        <module>staff-management</module>
        <module>inventory-management</module>
        <module>booking-management</module>
        <module>reporting-management</module>
        <module>payment-management</module>
        <module>notification-management</module>
        <module>restaurant-management</module>
        <module>promotion-management</module>
        <module>service-management</module>
    </modules>

    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>


    <properties>
        <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
        <mockito.version>5.2.0</mockito.version>
        <spring-kafka.version>3.3.7</spring-kafka.version>
        <kafka-avro-serializer.version>7.3.3</kafka-avro-serializer.version>
        <avro.version>1.11.4</avro.version>
        <java.version>17</java.version>
        <graphql-java.version>22.0</graphql-java.version>
        <graphql-java-extended-scalars.version>2022-12-18T02-09-15-8bb2279</graphql-java-extended-scalars.version>
        <spring-ai.version>1.0.0</spring-ai.version>
        <spring-boot-starter-graphql.version>3.3.4</spring-boot-starter-graphql.version>
        <swagger-project.version>2.8.5</swagger-project.version>
        <eureka-server.version>4.1.0</eureka-server.version>
        <spring-cloud.version>2024.0.1</spring-cloud.version>
        <openfeign.version>4.2.0</openfeign.version>
        <springdoc-openapi.version>2.2.0</springdoc-openapi.version>
        <junitt.version>5.10.3</junitt.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>saga</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>outbox</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>kafka-json-message</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>kafka-config-data</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>kafka-consumer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>kafka-producer</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>kafka-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>common-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>common-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>common-dataaccess</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>authentication-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>authentication-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>authentication-data-access</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>authen-domain-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>authen-application-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>authentication-container</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>ai-domain-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>ai-application-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>ai-dao</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>ai-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>ai-container</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>room-data-access</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>room-domain-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>room-application-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>room-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>room-container</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>room-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>booking-application</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>booking-container</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>booking-data-access</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>booking-domain-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>booking-application-service</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>booking-messaging</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.poly</groupId>
                <artifactId>service-management</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>${junitt.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>

    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.38</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${maven-antrun-plugin.version}</version>
                <configuration>
                </configuration>
            </plugin>
        </plugins>
    </build>


</project>
